--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,9 @@ nav a:hover {
 
 .album-details {
     margin: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .album-details h2, h3, h4 {
@@ -182,6 +185,9 @@ nav a:hover {
 
 .order {
     margin: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .pricing {
@@ -220,5 +226,8 @@ footer {
 
 .album-video {
     margin: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
